fixed svg excess space causing width out of viewport and  horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -25,14 +25,13 @@ body{
     -webkit-transition: 0.6s ease;
     transition: 0.6s ease;
     z-index: -10;
-    overflow: none;
+    
     
     
 }
 
 .hero-image img:hover{
     transform:  translate(0,-20%) scale(0.8);
-    
     transform-origin: center;
 }
 
